.helm/templates/ipsec-vpn-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ipsec-vpn-server
spec:
  selector:
    matchLabels:
      app: ipsec-vpn-server
  template:
    metadata:
      labels:
        app: ipsec-vpn-server
    spec:
      containers:
      - name: ipsec-vpn-server
        image: hwdsl2/ipsec-vpn-server
        imagePullPolicy: Always
        ports:
          - protocol: udp
            port: 500
            targetPort: 500
          - protocol: udp
            port: 4500
            targetPort: 4500
        securityContext:
          privileged: true
          capabilities:
            add: ["NET_ADMIN"]
