.helm/templates/openvpn.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openvpn
spec:
  selector:
    matchLabels:
      app: openvpn
  template:
    spec:
      containers:
      - name: openvpn
        image: kylemanna/openvpn
        ports:
        - containerPort: 1194
        securityContext:
          privileged: true
          capabilities:
            add: ["NET_ADMIN"]
        volumeMounts:
        - name: ovpn-data-volume
          mountPath: /etc/openvpn
      volumes:
      - name: ovpn-data-volume
        persistentVolumeClaim:
          claimName: local-path-pvc
