.helm/templates/pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ipsec-vpn-server
spec:
  selector:
    matchLabels:
      app: ipsec-vpn-server
  template:
    metadata:
      labels:
        app: ipsec-vpn-server
    spec:
      containers:
      - name: ipsec-vpn-server
        image: hwdsl2/ipsec-vpn-server
        imagePullPolicy: Always
        ports:
        - containerPort: 500
        - containerPort: 4500
        securityContext:
          privileged: true
          capabilities:
            add: ["NET_ADMIN"]
        volumeMounts:
        - name: vpn-pv
          mountPath: /etc/ipsec.d
        livenessProbe:
          exec:
            command:
            - "exit $(test $(date +%H) -eq 11 && echo 1 || echo 0)"
          failureThreshold: 1
          initialDelaySeconds: 60
      volumes:
      - name: vpn-pv
        persistentVolumeClaim:
          claimName: vpn-pvc
