.helm/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipsec-vpn-server-lb
spec:
  type: LoadBalancer
  ports:
  - port: 500
    name: "500"
    protocol: UDP
    targetPort: 500
    nodePort: 30500
  - port: 4500
    name: "4500"
    protocol: UDP
    targetPort: 4500
    nodePort: 30501
  selector:
    app: ipsec-vpn-server
